# openfactory-device-api

./: Dockerfile  README.md  app.py  config.py  exceptions.py  messages.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: build-image.yml  docker-image.yml
connection/: registry.py  session.py
monitoring/: asset_subscription.py  device_monitor.py  equipment_monitor.py  topic_subscription.py
services/: device_service.py  equipment_service.py  stream_service.py
services/enrichment_strategy/: default_strategy.py  device_enrichment_strategy.py  dusttrak_strategy.py  equipment_enrichment_strategy.py  ivac_strategy.py
tests/: conftest.py
tests/connection/: test_registry.py  test_session.py
tests/monitoring/: test_asset_subscription.py  test_device_monitor.py  test_equipment_monitor.py  test_topic_subscription.py
tests/services/: test_device_service.py  test_equipment_service.py  test_stream_service.py
tests/services/enrichment_strategy/: test_default_strategy.py  test_dusttrak_strategy.py  test_ivac_strategy.py
