[project]
name = "openfactory-equipment-api"
version = "1.0.0"
description = "OpenFactory API."
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "flake8",
    "tomlkit",
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
